@@ -1168,11 +1168,10 @@ namespace events{
 
 			if(teams_[team_num - 1].is_enemy(u->second.side()) && !gui_->fogged(u->first.x,u->first.y) && !u->second.incapacitated() && !invisible) {
 				const unit_movement_resetter move_reset(u->second);
-				const bool is_skirmisher = u->second.get_ability_bool("skirmisher",u->first);
 				const bool teleports = u->second.get_ability_bool("teleport",u->first);
 				unit_map units(u->first, u->second);
 				const paths& path = paths(map_,status_,gameinfo_,ignore_units?units:units_,
-										  u->first,teams_,is_skirmisher,teleports,teams_[gui_->viewing_team()]);
+										  u->first,teams_,false,teleports,teams_[gui_->viewing_team()],NULL);
 
 				gui_->highlight_another_reach(path);
 			}
