@@ -620,10 +620,9 @@ void play_controller::handle_event(const SDL_Event& event)
 				const unit_map::iterator u = mouse_handler_.selected_unit();
 
 				if(u != units_.end() && u->second.side() == player_number_) {
-					const bool ignore_zocs = u->second.get_ability_bool("skirmisher",u->first);
 					const bool teleport = u->second.get_ability_bool("teleport",u->first);
 					mouse_handler_.set_current_paths(paths(map_,status_,gameinfo_,units_,u->first,
-					                       teams_,ignore_zocs,teleport, teams_[gui_->viewing_team()],
+					                       teams_,false,teleport, teams_[gui_->viewing_team()],
 					                       mouse_handler_.get_path_turns()));
 					gui_->highlight_reach(mouse_handler_.get_current_paths());
 				}
